--- a/style.css
+++ b/style.css
@@ -400,6 +400,7 @@
 
      .price-order-img img {
          height: 700px;
+         right: 100px;
      }
 
      .order-desc-box img {
@@ -413,5 +414,97 @@
 
      .price-order-title {
          font-size: 70px;
+     }
+
+     .order-desc-list {
+         max-width: 434px;
+     }
+
+     .order-desc-btn {
+         min-width: 534px;
+     }
+
+     .order-desc-list-item::before {
+         top: 50px;
+
+     }
+ }
+
+ @media (max-width:1820px) {
+     .price-order-img img {
+         height: 600px;
+         right: -100px;
+     }
+
+     .price-order-title {
+         font-size: 60px;
+     }
+
+     .order-desc-box img {
+         height: 500px;
+     }
+
+     .order-desc-list-item {
+         font-size: 18px;
+         padding-top: 10px;
+     }
+
+     .footer-list-nav {
+         padding: 40px 0 40px 514px;
+     }
+ }
+
+ @media (max-width:1770px) {
+     .price-order-img img {
+         height: 600px;
+         right: -50px;
+     }
+
+     .header {
+         padding: 25px 0 0 100px;
+
+     }
+
+     .price-order-desc {
+         margin-left: 100px;
+     }
+ }
+
+ @media (max-width:1610px) {
+     .order-desc-btn {
+         min-width: 434px;
+         padding: 18px 22px;
+
+     }
+
+     .header-nav-box {
+         gap: 70px;
+     }
+
+     .price-order-title {
+         font-size: 40px;
+     }
+
+     .price-order-title-list {
+         font-size: 30px;
+     }
+
+ }
+
+ @media (max-width:1540px) {
+     .price-order-img img {
+         height: 500px;
+         right: 30px;
+     }
+ }
+
+ @media(max-width:1400px) {
+     .frame-form {
+         margin-left: 10px;
+
+     }
+
+     .footer-list-nav {
+         padding: 40px 0 40px 414px;
      }
  }
