--- a/global_style.css
+++ b/global_style.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    width: 100%;
+}
+
 body {
     background-color: #222222;
     margin: 0;
@@ -12,7 +17,8 @@ body {
     overflow-x: hidden;
     display: flex;
     flex-shrink: 1;
-    max-width: 90vh;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 
